# churn_predictions

./: .gitignore  APP_README.md  MODEL_ANALYSIS_REPORT.md  Presentations_Resultats_Projet.pptx  Presentations_Results_Project.pptx  README.md  SUMMARY.md  analysis_script.py  app.py  churn_analysis.ipynb  compare_models.py  create_notebook.py  find_best_lr.py  find_transformer_lr.py  generate_enhanced_notebook.py  generate_presentation.py  pyproject.toml  report.md  requirements.txt  train_lstm_model.py  train_transformer_model.py
config/: model_config.py
docs/: METRICS_EXPLANATION.md  MODEL_DOCUMENTATION.md  NEXT_STEPS.md  SUMMARY.md  TESTING_RESULTS.md  TRAINING_TIME_ANALYSIS.md  executive_presentation.md  next_steps.md  project_audit_report.md
models/: gru_model.py  transformer_model.py
models/lstm/: __init__.py  best_model.pt  model.py  results.json  train.py
models/lstm/lr_0.001/: best_model.pt  results.json
models/lstm/lr_0.005/: best_model.pt  results.json
models/lstm/lr_0.01/: best_model.pt  results.json
models/lstm/lr_0.05/: best_model.pt  results.json
models/transformer/: __init__.py  best_model.pt  model.py  results.json
notebooks/: 01_data_processing.ipynb  02_logistic_regression.ipynb  03_xgboost.ipynb  04_lightgbm.ipynb  05_gru_model.ipynb  06_transformer_model.ipynb  07_model_comparison.ipynb  08_hybrid_ensemble.ipynb  churn_analysis.ipynb  churn_analysis_before_dl.ipynb
notebooks/archive/: churn_analysis_old.ipynb
results/: app_config.json  feature_columns.json
results/metrics/gru/: gru_metrics.json
(+4 files in other folders)
