[project]
name = "churn_predictions"
version = "0.1.0"
description = "Churn prediction analysis for Kolecto"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "matplotlib",
    "seaborn",
    "pydantic",
    "jupyter",
    "shap",
    "notebook (>=7.5.0,<8.0.0)"
]
