[tool.poetry]
name = "churn-predictions"
version = "1.0.0"
description = "Machine learning models for predicting trial-to-paid conversion (Client case study)"
authors = ["Paulino Cristovao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
xgboost = ">=2.0.0"
lightgbm = ">=4.0.0"
torch = ">=2.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
pydantic = ">=2.0.0"
jupyter = ">=1.0.0"
shap = ">=0.42.0"
tqdm = ">=4.65.0"
optuna = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
